Adding title and timestamp to notes, adding list for notes, allowing for CRUD operations on the list of notes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ eframe = { version = "0.28.1", default-features = false, features = ["accesskit"
 egui = "0.28.1"
 egui_extras = "0.28.1"
 serde = { version = "1", features = ["derive"] }
+time = "0.3.36"
